# VoxelRaytracing

./: .gitignore  CMakeLists.txt  GenerateVsProject.bat  README.md
Sources/: GlmUtils.h  main.cpp
Sources/Graphics/: RendererWindow.cpp  RendererWindow.h  Texture.cpp  Texture.h
Sources/Tracing/: Hittable.cpp  Hittable.h  Light.cpp  Light.h  Material.h  Ray.h  Scene.cpp  Scene.h  Transform.h
